# JARVIS

./: .cursorignore  .cursorrules  .dockerignore  .env.example  .env.parallel  .gitignore  .gitleaks.toml  .hypervisor_state.json  .jarvis_health  .pre-commit-config.yaml  =0.3.0  A1_LAUNCH_MANIFEST.json  ABBY_CONNECT_SKILLS_ASSESSMENT.md  ADVANCED_TRAINING_SYSTEM_SUMMARY.md  AGENTS.md  CI_FAILURE_REPORT.md  CLAUDE.md  CLOUD_SQL_FIX_COMPLETE.md  COMPLETE_FIX_SUMMARY.md  COMPLETE_VIBA_PAVA_INTEGRATION_GUIDE.md  COMPREHENSIVE_DEEP_DIVE_ECAPA_VIBA_PAVA.md  COMPUTER_USE_CROSS_REPO_INTEGRATION.md  COMPUTER_USE_OPTIMIZATION_TEST_RESULTS.md  CROSS_REPO_ENHANCEMENTS_SUMMARY.md  DIAGNOSTIC_REPORT_ECAPA_VIBA_PAVA.md  FERRARI_ENGINE_INTEGRATION_SUCCESS.md  FERRARI_QUICKSTART.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_COMPLETE_V5.md  INTEGRATION_SUMMARY.md  INTEGRATION_SUMMARY_V5.md  INTEGRATION_VERIFICATION.md  INTELLIGENCE_SUPERVISOR_INTEGRATION.md  JARVIS Ecosystem - Deep Architectural Analysis   LINKEDIN_JARVIS_PROFILE.md  NETWORK_RECOVERY_FIX_v10.6.md  OMNIPARSER_COMPLETE_INTEGRATION.md  Ouroboros (Self-Programming)  PHASE_3_ARCHITECTURE_UPGRADE_PLAN.md  QUICK_START_TRAINING.md  (+63 more)
.claude/: settings.json
.jarvis/: order2_manifest.yaml  roadmap.draft.yaml
.jarvis_cache/: memory.db
.livefire/: tmp_vscode_driver.js
JARVIS-Apple/: .gitignore  project.yml
backend/: MAIN_PY_OPTIMIZATION_GUIDE.md  __init__.py  demo_auto_voice.py  demo_full_lock_unlock_flow.py  demo_lock_unlock_simple.py  demo_prd_scenario.py  demo_visual_flow.py  demo_voice_lock_flow.py  dynamic_jarvis_activation.py  graceful_http_handler.py  jarvis_event_coordinator.py  jarvis_reload_manager.py  jarvis_swift_integrated_assistant.py  loading_server.py  macos_keychain_unlock.py  main.py  main_minimal.py  manage_rust.py  minimal_to_full_upgrader.py  ml_memory_manager.py  optimized_backend_startup.py  parallel_startup_manager.py  process_cleanup_manager.py  requirements-cloud.txt  requirements-gcp-databases.txt  requirements-optional.txt  requirements.txt  requirements_fixed.txt  resource_manager.py  start_backend_robust.py  start_jarvis_simple.py  start_system_parallel.py  swift_classifier_status.py  unified_dynamic_system.py  unified_rust_service.py
backend/native_extensions/: CMakeLists.txt  macos_sck_stream.py  test_sck_loop.py  test_sck_minimal.py  test_sck_streaming.py
backend/native_extensions/include/: fast_capture_stream.h
backend/native_extensions/src/: fast_capture.mm  fast_capture_stream.mm  python_stream_bindings.cpp  shm_frame_bridge.h
benchmarks/: BENCHMARK_RESULTS.md  LATEST.md  README.md  VOICEAI_BENCHMARK_REPORT.html  benchmark_results.json  build_report.py  history.json  ipc_and_inference_benchmark.py  report_template.html  run-2026-03-14T16-26-33.json  run-2026-03-14T19-28-19.json  run-2026-03-16T05-55-17.json  run-2026-03-16T06-32-13.json  run-2026-03-16T08-05-18.json  run_benchmarks.py  trinity_benchmark_analysis.ipynb  voiceai_benchmark_20260318T145309.json  voiceai_benchmark_20260318T145309.md  voiceai_benchmark_20260318T150107.json  voiceai_benchmark_20260318T150107.md  voiceai_benchmark_analysis.ipynb  voiceai_benchmark_analysis_executed.ipynb  voiceai_persistent_ws_20260318T151513.json  voiceai_persistent_ws_20260318T151513.md  voiceai_persistent_ws_benchmark.py  voiceai_summary_stats.csv  voiceai_tts_benchmark.py  voiceai_v2_20260318T152419.json  voiceai_v2_20260318T152419.md
brainstem/: __init__.py  __main__.py  action_dispatcher.py  auth.py  command_sender.py  config.py  hud.py  main.py  sse_consumer.py  tts.py  vision_bridge.py  voice_intake.py
config/: goal_seeds.json  mutation_critical_paths.yml
data/: discovered_topics.json
deploy/: C2_TELEMETRY.md  DEPLOY_PROD.md  README.md  gcp_ouroboros_startup.sh  jarvis-agent.service.template  jarvis-state-vault.service.template  ouroboros_linux_prod.env  ouroboros_omni_prod.env  provision_docker_host.sh  provision_host.sh
diagnostics/: doubleword_reasoning_integration_spec.md  vendor_doubleword_empty_stream_repro.md
docker/: .env.example  Dockerfile.backend  Dockerfile.backend-slim  Dockerfile.cloud  Dockerfile.frontend  Dockerfile.gcp-inference  Dockerfile.soak  docker-compose.yml  entrypoint.sh  gcp_inference_stub.py  nginx.conf  requirements-soak-oracle.txt  requirements-soak.txt  soak_git_entrypoint.sh
(+7556 files in other folders)
